diesel_compile_tests/tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation2.rs
#[macro_use]
extern crate diesel;

#[derive(QueryableByName)]
struct Foo {
    //~^ ERROR: cannot find module or crate `foos` in this scope
    foo: i32,
    bar: String,
}

fn main() {}
